# server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  lint.sh  rustfmt.toml  sit-we-go.postman_collection.json
.github/workflows/: ci.yml
